--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <body>
     <header>
-      <div class="container">
+      <div class="container header">
         <nav class="t">
           <a class="logo" href="#"><span>Web</span> Studio</a>
 
-          <ul class="nav-link">
+          <ul class="nav-link-1">
             <li class="nav-link">
               <a class="nav-link" href="#">Студія</a>
             </li>
@@ -35,6 +35,7 @@
               <a class="nav-link" href="#">Контакти</a>
             </li>
           </ul>
+        </nav>
 
           <ul class="y">
             <li class="u">
@@ -44,7 +45,6 @@
               <a class="contacts-link" href="#">+30 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
       </div>
     </header>
     <main>
