--- a/index.html
+++ b/index.html
@@ -49,35 +49,45 @@
     </header>
     <main>
       <div class="container">
-        <section class="qwer">
+      <section class="qwer">
           <h1 class="f">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button">Замовити послугу</button>
         </section>
 
-        <section class="qwer">
+        <section class="qwsder">
           <h2 class="j">Переваги</h2>
-          <h3 class="o">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="v">
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-          <h3 class="o">ПУНКТУАЛЬНІСТЬ</h3>
-          <p class="v">
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-          <h3 class="o">ПЛАНУВАННЯ</h3>
-          <p class="v">
-            Так само консультація з широким активом значною мірою зумовлює.
-          </p>
-          <h3 class="o">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p class="v">
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
+          <ul class="qwwq">
+            <li class="asdfv">
+              <h3 class="o">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="v">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування
+                позиції.
+              </p>
+              </li>
+              <li class="asdfv">
+                <h3 class="o">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="v">
+                  Завдання організації, особливо рамки і місце навчання кадрів тягне у
+                  себе.
+              </li>
+              <li class="asdfv">
+              </p>
+              <h3 class="o">ПЛАНУВАННЯ</h3>
+              <p class="v">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+              </li>
+              <li class="asdfv">
+                <h3 class="o">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="v">
+                  Значимість цих проблем настільки очевидна, що реалізація планових
+                  завдань.
+                </p>
+              </li>
+          </ul>
         </section>
 
-        <section class="qwer">
+        <section class="qweyr">
           <h2 class="ui">ЧИМ МИ ЗАЙМАЄМОСЯ</h2>
           <ul class="df">
             <li class="cs">
@@ -93,7 +103,7 @@
             </li>
           </ul>
         </section>
-        <section class="qwer">
+        <section class="qwuer">
           <h2 class="hj">НАША КОМАНДА</h2>
           <ul class="fr">
             <li class="lis">
